--- a/style.css
+++ b/style.css
@@ -2,6 +2,22 @@ body {
 	/*background-color: gray;*/
 }
 
+.overlays {
+	position: absolute;
+	width: 100%;
+}
+.message {
+	background-color: transparent;
+	text-align: center;
+	text-transform: uppercase;
+	color: maroon;
+	font-size: 6em;
+	font-weight: bold;
+	font-family: sans-serif;
+	display: none;
+	margin-top: 200px;
+}
+
 #info_container {
 	background-image: url("resources/images/cowback.png"); 
 	background-size: 390px 375px;
@@ -35,8 +51,8 @@ td {
 	text-align: center;
 }
 
-#info_container table td:first-child {
-	color: red;
+#info_container table td:last-child {
+	color: maroon;
 }
 
 #container {
@@ -50,7 +66,7 @@ td {
 	box-shadow:         inset 0 0 40px #000000;
 }
 
-#canvas {
-	border: 1px solid;
+#game_canvas {
 	margin-right: 5px;
+	border: 1px solid;
 }
